--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,5 +40,7 @@ install-script:
       - git config --global user.name "${GITLAB_USER_NAME}"
           && git config --global user.email "${GITLAB_USER_EMAIL}"
   script:
+      - apt-get update 1>/dev/null && apt-get -y install sudo apt-utils 1>/dev/null
+      - echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-selections
       - sudo apt-get install -y -q
       - ./tools/install.sh
