--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,4 +62,4 @@ jobs:
           sudo apt-get update && sudo apt-get -y install sudo apt-utils
           echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-selections
           sudo apt-get install -y -q
-          ./tools/install.sh
+          ./install.sh
