--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           sudo apt-get update && sudo apt-get -y install sudo apt-utils
           echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-selections
           sudo apt-get install -y -q
-          ./tools/install.sh
+          ./install.sh
 
   jammy:
     runs-on: ubuntu-latest
