--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = nvim
 	url = https://github.com/yimjiajun/neovim.git
 	branch = main
+[submodule "dediprog"]
+	path = tools/other/dediprog
+	url = https://github.com/DediProgSW/SF100Linux.git
+	branch = main
