--- a/docs/book.toml
+++ b/docs/book.toml
@@ -4,3 +4,11 @@ language = "en"
 multilingual = false
 src = "."
 title = "dotfiles"
+
+[output.html.print]
+enable = true    # include support for printable output
+page-break = true # insert page-break after each chapter
+
+[output.html.fold]
+enable = true    # whether or not to enable section folding
+level = 0         # the depth to start folding
