--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -3,21 +3,12 @@ set -g status on # turn off status bar
 set-option -g prefix C-' '
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 # Plugin Themes
 set -g @plugin 'seebi/tmux-colors-solarized'
 # theme select
-set -g @colors-solarized '256'
+# set -g @colors-solarized '256'
+set -g default-terminal "tmux-256color"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-# set -g default-terminal "screen-256color"
-# set -g status-bg green
-# set -g status-fg white
 setw -g mode-keys vi # vi mode (C-[)
-# show color
-#for i in {0..255} ; do
-#   printf "\x1b[38;5;14mcolour14\n"
-#done
-
 # source tmux by <prefix key> + 'I'
