--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -12,3 +12,4 @@ set -g default-terminal "tmux-256color"
 run '~/.tmux/plugins/tpm/tpm'
 setw -g mode-keys vi # vi mode (C-[)
 # source tmux by <prefix key> + 'I'
+bind-key O kill-pane -a
