feat data/.tmux.conf: theme catppuccin

--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -1,15 +1,16 @@
 set -g status on # turn off status bar
-
 set-option -g prefix C-' '
+setw -g mode-keys vi # vi mode (C-[)
+bind-key O kill-pane -a
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 # Plugin Themes
-set -g @plugin 'seebi/tmux-colors-solarized'
-# theme select
-# set -g @colors-solarized '256'
-set -g default-terminal "tmux-256color"
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_status_right_separator "█"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_modules "date_time"
+set -g @catppuccin_date_time_color "yellow"
+
 run '~/.tmux/plugins/tpm/tpm'
-setw -g mode-keys vi # vi mode (C-[)
 # source tmux by <prefix key> + 'I'
-bind-key O kill-pane -a
