fix data/.tmux.conf: tmux support term 256 colors

--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -3,6 +3,7 @@ set-option -g prefix C-' '
 setw -g mode-keys vi # vi mode (C-[)
 bind-key O kill-pane -a
 # List of plugins
+set -g default-terminal "tmux-256color"
 set -g @plugin 'tmux-plugins/tpm'
 # Plugin Themes
 set -g @plugin 'catppuccin/tmux'
