--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -12,6 +12,7 @@ set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_modules "date_time"
 set -g @catppuccin_date_time_color "yellow"
-
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text "#W"
 run '~/.tmux/plugins/tpm/tpm'
 # source tmux by <prefix key> + 'I'
