feat tmux: display date and time on right bottom corner

--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -11,6 +11,8 @@ set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_modules "date_time"
+set -g @catppuccin_status_modules_right "date_time"
+set -g @catppuccin_status_modules_left ""
 set -g @catppuccin_date_time_color "yellow"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_text "#W"
