--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -13,8 +13,15 @@ set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_modules "date_time"
 set -g @catppuccin_status_modules_right "date_time"
 set -g @catppuccin_status_modules_left ""
-set -g @catppuccin_date_time_color "yellow"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_date_time_color ""
+set -g @catppuccin_window_default_text " #W "
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_current_text "#W "
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_window_middle_separator " "
+set -g @catppuccin_window_right_separator ""
+set -g @catppuccin_window_left_separator ""
+set -g status-position top
 run '~/.tmux/plugins/tpm/tpm'
 # source tmux by <prefix key> + 'I'
