--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -1,6 +1,7 @@
 set -g status on # turn off status bar
 set-option -g prefix C-' '
 setw -g mode-keys vi # vi mode (C-[)
+set-option -sg escape-time 10
 bind-key O kill-pane -a
 # List of plugins
 set -g default-terminal "tmux-256color"
