--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -2,6 +2,7 @@ set -g status on # turn off status bar
 set-option -g prefix C-' '
 setw -g mode-keys vi # vi mode (C-[)
 set-option -sg escape-time 10
+set-option -g focus-events on
 bind-key O kill-pane -a
 # List of plugins
 set -g default-terminal "tmux-256color"
