feat git: uses LF line endings, then you don’t want Git to automatically convert them when you check out files

--- a/data/.gitconfig
+++ b/data/.gitconfig
@@ -5,6 +5,7 @@
 [core]
 	editor = nvim --noplugin
 	excludesfile = ~/.gitignore_global
+	autocrlf = input
 [alias]
 	l = log --oneline --graph --all
 	lr = reflog
