feat tmux: support yazi image preview and set tmux as default terminal

--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -25,5 +25,13 @@ set -g @catppuccin_window_middle_separator " "
 set -g @catppuccin_window_right_separator ""
 set -g @catppuccin_window_left_separator ""
 set -g status-position top
+
 run '~/.tmux/plugins/tpm/tpm'
+# To enable Yazi's image preview to work correctly. $yazi
+# https://yazi-rs.github.io/docs/image-preview/#tmux
+# tmux kill-server && tmux || tmux
+set -g allow-passthrough on
+
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 # source tmux by <prefix key> + 'I'
