--- a/data/.tmux.conf
+++ b/data/.tmux.conf
@@ -6,24 +6,6 @@ set-option -g focus-events on
 bind-key O kill-pane -a
 # List of plugins
 set -g default-terminal "tmux-256color"
-set -g @plugin 'tmux-plugins/tpm'
-# Plugin Themes
-set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'mocha'
-set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_modules "date_time"
-set -g @catppuccin_status_modules_right "date_time"
-set -g @catppuccin_status_modules_left ""
-set -g @catppuccin_date_time_color ""
-set -g @catppuccin_window_default_text " #W "
-set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_current_text "#W "
-set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_middle_separator " "
-set -g @catppuccin_window_right_separator ""
-set -g @catppuccin_window_left_separator ""
 set -g status-position top
 
 run '~/.tmux/plugins/tpm/tpm'
@@ -34,4 +16,14 @@ set -g allow-passthrough on
 
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
+
+set -g status-left ' 󱤆  '
+set -g status-right " %Y-%m-%d %H:%M "
+set -g status-style "fg=white,bg=default"
+set -g window-status-format "#[reverse] #I #[none] #W "
+set -g window-status-style "none"
+set -g window-status-current-style "fg=yellow,bg=black,bold"
+set -g window-status-current-format "#[reverse,bold] #I #[none, bold] #W "
+set -g window-status-separator " "
+
 # source tmux by <prefix key> + 'I'
