--- a/data/.config/i3/config
+++ b/data/.config/i3/config
@@ -115,18 +115,22 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# Adjust gamma / color temperature using gammastep (night shift)
+bindsym $mod+n exec --no-startup-id gammastep -O 3500
+bindsym $mod+Shift+n exec --no-startup-id gammastep -x
+
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
+set $ws1 "1: Dev"
+set $ws2 "2: Browser"
+set $ws3 "3: Document"
+set $ws4 "4: Media"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+set $ws9 "9: Connection"
+set $ws10 "10: Chat"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -201,3 +205,5 @@ client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 client.background       #ffffff
+
+title_align center
