--- a/data/.config/i3/config
+++ b/data/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -28,7 +28,8 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# screen display as locked with a black background.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -c 000000
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -121,16 +122,16 @@ bindsym $mod+Shift+n exec --no-startup-id gammastep -x
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1: Dev"
-set $ws2 "2: Browser"
-set $ws3 "3: Document"
-set $ws4 "4: Media"
+set $ws1 "1: Media"
+set $ws2 "2: Connection"
+set $ws3 "3"
+set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9: Connection"
-set $ws10 "10: Chat"
+set $ws7 "7: Chat"
+set $ws8 "8: Browser"
+set $ws9 "9: Document"
+set $ws10 "10: Dev"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -193,8 +194,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
-
+        status_command i3status -c ~/.config/i3status/config
 }
 
 # class                 border  backgr. text    indicator child_border
