feat(i3): add fcitx5 pinyin input method support
- Add fcitx5 configuration files for pinyin input
- Configure i3wm to auto-start fcitx5 in daemon mode
- Add .xprofile environment variables for GTK/Qt support
- Implement append_to_file_if_not_exists utility function
- Install fcitx5-pinyin with GTK frontend dependencies
- Link fcitx5 config directory from dotfiles data

Configuration includes hotkey setup (Ctrl+Alt+Space) and
pinyin as default input method with US keyboard fallback.

--- a/data/.config/i3/config
+++ b/data/.config/i3/config
@@ -35,6 +35,9 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -c 000000
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
+# Start the keyboard input method framework fcitx5 in daemon mode.
+exec --no-startup-id fcitx5 -d
+
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 10%+ && $refresh_i3status
