chore: update user config and submodules
- Update git user name to Richard Yim
- Update git user email to richardyim@ami.com
- Update .localdata submodule to 2947b62
- Update nvim submodule to 82844de

--- a/data/.gitconfig
+++ b/data/.gitconfig
@@ -42,8 +42,8 @@
 [commit]
 	template = ~/.gitmessage
 [user]
-	name = JiaJun Yim
-	email = yimjiajun@icloud.com
+	name = Richard Yim
+	email = richardyim@ami.com
 [init]
 	defaultBranch = main
 [include]
